@@ -1,3 +1,8 @@
+2007-10-30  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	* library/demos/unicodeout.tcl: Fixed Arabic and Hebrew rendering
+	on Windows. [Bug 1803723]
+
 2007-10-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* generic/tkImgPhoto.c (ImgPhotoCmd): Rename enumeration for somewhat
